# bokGalil

./: .gitignore  CMakeLists.txt  README.Galil.md  README.indi.md  README.md  indi_Galil.xml.cmake  indi_GalilFilterWheel.xml.cmake  requirements.txt  test_galil.c  test_galil.make
docs/: bok_filters.txt  bok_gfilters.txt  bok_ifilters.txt  bok_ng_commands.txt  bok_nominal_plane.txt  bok_sfilters.txt  fw-gui.oldcode.ruby  galil_90prime.dmc  galil_variables.txt  galilserver.oldcode.ruby  resources_indi.txt
etc/: bokGalil.sh
src/: Galil_DMC_22x0_CLI  Galil_DMC_22x0_CLI.c  Galil_DMC_22x0_CLI.h  Galil_DMC_22x0_NgClient.c  Galil_DMC_22x0_NgClient.py  Galil_DMC_22x0_NgClient_Requests.py  Galil_DMC_22x0_NgServer.c  Galil_DMC_22x0_Read_Telemetry.py  Galil_DMC_22x0_TCP_Read  Galil_DMC_22x0_TCP_Read.c  Galil_DMC_22x0_TCP_Read.py  Galil_DMC_22x0_TCP_Write.c  Galil_DMC_22x0_UDP_Read.c  Galil_DMC_22x0_UDP_Read.py  Galil_DMC_22x0_UDP_Write.c  Galil_DMC_22x0_Write_Memory.c  Makefile  __hosts__.banzai.h  __hosts__.bart.h  __hosts__.bonsai.h  __hosts__.home.h  __hosts__.lab.h  __init__.py  bokGalil.c  bokGalil.h  bokGalilIndiDriver  bokGalilIndiDriver.c  bok_nominal_plane.txt  bok_read_filters  bok_read_filters.c  bok_read_guider_filters  bok_read_guider_filters.c  bok_read_instrument_filters.c  bok_read_nominal_plane.c  indi_GalilFilterWheel.cpp  indi_GalilFilterWheel.h
tcl/: Makefile  bokBindWidgets.tcl  bokBuildFrame.tcl  bokBuildWidgets.tcl  bokHosts.tcl  bokInit.tcl  bokParams.banzai.txt  bokParams.bart.txt  bokParams.bonsai.txt  bokParams.home.txt  bokParams.steward.txt  bokParams.txt  bokSetProject.tcl  bokSplash.tcl  bokSplash.xdialog  bokSplash.xopt  bokStart.tcl  bokStatus.tcl  bokStop.tcl  bokUpdateWidgets.tcl  tclIndex
tex/: Makefile  bokGalil.sty  bokGalil.tex
